--- a/public/index.html
+++ b/public/index.html
@@ -88,34 +88,34 @@
             <div class="titulo-impulsos-container">
               <h2>Corpo</h2>
               <div class="impulsos-checkboxes">
-                <input type="checkbox" name="corpo_impulso_1" />
-                <input type="checkbox" name="corpo_impulso_2" />
-                <input type="checkbox" name="corpo_impulso_3" />
-                <input type="checkbox" name="corpo_impulso_4" />
-                <input type="checkbox" name="corpo_impulso_5" />
-                <input type="checkbox" name="corpo_impulso_6" />
-                <input type="checkbox" name="corpo_impulso_7" />
-                <input type="checkbox" name="corpo_impulso_8" />
-                <input type="checkbox" name="corpo_impulso_9" />
+                <input type="checkbox" name="corpo_impulso_1" class="checkbox-impulso" />
+                <input type="checkbox" name="corpo_impulso_2" class="checkbox-impulso" />
+                <input type="checkbox" name="corpo_impulso_3" class="checkbox-impulso" />
+                <input type="checkbox" name="corpo_impulso_4" class="checkbox-impulso" />
+                <input type="checkbox" name="corpo_impulso_5" class="checkbox-impulso" />
+                <input type="checkbox" name="corpo_impulso_6" class="checkbox-impulso" />
+                <input type="checkbox" name="corpo_impulso_7" class="checkbox-impulso" />
+                <input type="checkbox" name="corpo_impulso_8" class="checkbox-impulso" />
+                <input type="checkbox" name="corpo_impulso_9" class="checkbox-impulso" />
               </div>
             </div>
-            <label><input type="checkbox" class="mover-checkbox"> Mover <small>(Correr, Desviar, Guiar)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Mover <small>(Correr, Desviar, Guiar)</small>
               <br>
-              <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
-                type="checkbox"> <input type="checkbox"> <input type="checkbox">
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
               <!-- <input type="number" name="mover" min="0" max="6" /> -->
             </label>
 
-            <label><input type="checkbox"> Atacar <small>(Socar, Quebrar, Derrubar)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Atacar <small>(Socar, Quebrar, Derrubar)</small>
               <br>
-              <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
-                type="checkbox"> <input type="checkbox"> <input type="checkbox">
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
               <!-- <input type="number" name="atacar" min="0" max="6" /> -->
             </label>
-            <label><input type="checkbox"> Controlar <small>(Dirigir, Atirar, Finesse)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Controlar <small>(Dirigir, Atirar, Finesse)</small>
               <br>
-              <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
-                type="checkbox"> <input type="checkbox"> <input type="checkbox">
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
               <!-- <input type="number" name="controlar" min="0" max="6" /> -->
             </label>
           </div>
@@ -123,32 +123,32 @@
             <div class="titulo-impulsos-container">
               <h2>Astúcia</h2>
               <div class="impulsos-checkboxes">
-                <input type="checkbox" name="astucia_impulso_1" />
-                <input type="checkbox" name="astucia_impulso_2" />
-                <input type="checkbox" name="astucia_impulso_3" />
-                <input type="checkbox" name="astucia_impulso_4" />
-                <input type="checkbox" name="astucia_impulso_5" />
-                <input type="checkbox" name="astucia_impulso_6" />
-                <input type="checkbox" name="astucia_impulso_7" />
-                <input type="checkbox" name="astucia_impulso_8" />
-                <input type="checkbox" name="astucia_impulso_9" />
+                <input type="checkbox" name="astucia_impulso_1" class="checkbox-impulso" />
+                <input type="checkbox" name="astucia_impulso_2" class="checkbox-impulso" />
+                <input type="checkbox" name="astucia_impulso_3" class="checkbox-impulso" />
+                <input type="checkbox" name="astucia_impulso_4" class="checkbox-impulso" />
+                <input type="checkbox" name="astucia_impulso_5" class="checkbox-impulso" />
+                <input type="checkbox" name="astucia_impulso_6" class="checkbox-impulso" />
+                <input type="checkbox" name="astucia_impulso_7" class="checkbox-impulso" />
+                <input type="checkbox" name="astucia_impulso_8" class="checkbox-impulso" />
+                <input type="checkbox" name="astucia_impulso_9" class="checkbox-impulso" />
               </div>
             </div>
-            <label><input type="checkbox"> Persuadir <small>(Convencer, Liderar)</small></label>
-            <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
-              type="checkbox"> <input type="checkbox"> <input type="checkbox">
+            <label><input type="checkbox" class="dourado-checkbox"> Persuadir <small>(Convencer, Liderar)</small></label>
+            <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
             <!-- <input type="number" name="investigar" min="0" max="6" /> -->
             </label>
-            <label><input type="checkbox"> Ler <small>(Linguagem Corporal, Identificar Mentiras)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Ler <small>(Linguagem Corporal, Identificar Mentiras)</small>
               <br>
-              <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
-                type="checkbox"> <input type="checkbox"> <input type="checkbox">
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
               <!-- <input type="number" name="ler" min="0" max="6" /> -->
             </label>
-            <label><input type="checkbox"> Esconder <small>(Esgueirar-se, Disfarçar, Enganar)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Esconder <small>(Esgueirar-se, Disfarçar, Enganar)</small>
               <br>
-              <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
-                type="checkbox"> <input type="checkbox"> <input type="checkbox">
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
               <!-- <input type="number" name="esconder" min="0" max="6" /> -->
             </label>
           </div>
@@ -156,33 +156,33 @@
             <div class="titulo-impulsos-container">
               <h2>Intuição</h2>
               <div class="impulsos-checkboxes">
-                <input type="checkbox" name="intuicao_impulso_1" />
-                <input type="checkbox" name="intuicao_impulso_2" />
-                <input type="checkbox" name="intuicao_impulso_3" />
-                <input type="checkbox" name="intuicao_impulso_4" />
-                <input type="checkbox" name="intuicao_impulso_5" />
-                <input type="checkbox" name="intuicao_impulso_6" />
-                <input type="checkbox" name="intuicao_impulso_7" />
-                <input type="checkbox" name="intuicao_impulso_8" />
-                <input type="checkbox" name="intuicao_impulso_9" />
+                <input type="checkbox" name="intuicao_impulso_1" class="checkbox-impulso" />
+                <input type="checkbox" name="intuicao_impulso_2" class="checkbox-impulso" />
+                <input type="checkbox" name="intuicao_impulso_3" class="checkbox-impulso" />
+                <input type="checkbox" name="intuicao_impulso_4" class="checkbox-impulso" />
+                <input type="checkbox" name="intuicao_impulso_5" class="checkbox-impulso" />
+                <input type="checkbox" name="intuicao_impulso_6" class="checkbox-impulso" />
+                <input type="checkbox" name="intuicao_impulso_7" class="checkbox-impulso" />
+                <input type="checkbox" name="intuicao_impulso_8" class="checkbox-impulso" />
+                <input type="checkbox" name="intuicao_impulso_9" class="checkbox-impulso" />
               </div>
             </div>
-            <label><input type="checkbox"> Investigar <small>(Pesquisar, Rastrear, Localizar)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Investigar <small>(Pesquisar, Rastrear, Localizar)</small>
               <br>
-              <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
-                type="checkbox"> <input type="checkbox"> <input type="checkbox">
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
               <!-- <input type="number" name="persuasao" min="0" max="6" /> -->
             </label>
-            <label><input type="checkbox"> Focar <small>(Inspecionar, Analisar, Lembrar)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Focar <small>(Inspecionar, Analisar, Lembrar)</small>
               <br>
-              <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
-                type="checkbox"> <input type="checkbox"> <input type="checkbox">
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
               <!-- <input type="number" name="focar" min="0" max="6" /> -->
             </label>
-            <label><input type="checkbox"> Sentir <small>(Ocultismo, Canalizar, Revelar)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Sentir <small>(Ocultismo, Canalizar, Revelar)</small>
               <br>
-              <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
-                type="checkbox"> <input type="checkbox"> <input type="checkbox">
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
               <!-- <input type="number" name="sentir" min="0" max="6" /> -->
             </label>
           </div>
