acerto para impulsos,acoes e dados dourados

--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,7 @@
                 <input type="checkbox" name="corpo_impulso_9" class="checkbox-impulso" />
               </div>
             </div>
+            <hr class="separador-impulsos-acoes" />
             <label><input type="checkbox" class="dourado-checkbox"> Mover <small>(Correr, Desviar, Guiar)</small>
               <br>
               <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
@@ -134,7 +135,9 @@
                 <input type="checkbox" name="astucia_impulso_9" class="checkbox-impulso" />
               </div>
             </div>
-            <label><input type="checkbox" class="dourado-checkbox"> Persuadir <small>(Convencer, Liderar)</small></label>
+            <hr class="separador-impulsos-acoes" />
+            <label><input type="checkbox" class="dourado-checkbox"> Persuadir <small>(Convencer, Liderar)</small>
+              <br>
             <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
                 type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
             <!-- <input type="number" name="investigar" min="0" max="6" /> -->
@@ -167,6 +170,7 @@
                 <input type="checkbox" name="intuicao_impulso_9" class="checkbox-impulso" />
               </div>
             </div>
+            <hr class="separador-impulsos-acoes" />
             <label><input type="checkbox" class="dourado-checkbox"> Investigar <small>(Pesquisar, Rastrear, Localizar)</small>
               <br>
               <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
