--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,13 @@
         <section class="atributos">
           <div class="atributo" id="corpo">
             <div class="titulo-impulsos-container">
+              <div class="titulo-e-maximo">
               <h2>Corpo</h2>
+              <label class="max-impulsos-control">
+                Impulsos:
+                <input type="number" min="1" max="9" value="1" class="max-impulsos-input" data-atributo="corpo" />
+              </label>
+              </div>
               <div class="impulsos-checkboxes">
                 <input type="checkbox" name="corpo_impulso_1" class="checkbox-impulso" />
                 <input type="checkbox" name="corpo_impulso_2" class="checkbox-impulso" />
@@ -102,27 +108,36 @@
             <hr class="separador-impulsos-acoes" />
             <label><input type="checkbox" class="dourado-checkbox"> Mover <small>(Correr, Desviar, Guiar)</small>
               <br>
-              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
-                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
-              <!-- <input type="number" name="mover" min="0" max="6" /> -->
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao">
             </label>
 
             <label><input type="checkbox" class="dourado-checkbox"> Atacar <small>(Socar, Quebrar, Derrubar)</small>
               <br>
-              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
-                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
-              <!-- <input type="number" name="atacar" min="0" max="6" /> -->
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao">
             </label>
             <label><input type="checkbox" class="dourado-checkbox"> Controlar <small>(Dirigir, Atirar, Finesse)</small>
               <br>
-              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
-                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
-              <!-- <input type="number" name="controlar" min="0" max="6" /> -->
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao">
             </label>
           </div>
           <div class="atributo" id="astucia">
             <div class="titulo-impulsos-container">
+              <div class="titulo-e-maximo">
               <h2>Astúcia</h2>
+              <label class="max-impulsos-control">
+                Impulsos:
+                <input type="number" min="1" max="9" value="9" class="max-impulsos-input" data-atributo="astucia" />
+              </label>
+              </div>
               <div class="impulsos-checkboxes">
                 <input type="checkbox" name="astucia_impulso_1" class="checkbox-impulso" />
                 <input type="checkbox" name="astucia_impulso_2" class="checkbox-impulso" />
@@ -138,26 +153,37 @@
             <hr class="separador-impulsos-acoes" />
             <label><input type="checkbox" class="dourado-checkbox"> Persuadir <small>(Convencer, Liderar)</small>
               <br>
-            <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
-                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
-            <!-- <input type="number" name="investigar" min="0" max="6" /> -->
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao">
             </label>
-            <label><input type="checkbox" class="dourado-checkbox"> Ler <small>(Linguagem Corporal, Identificar Mentiras)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Ler <small>(Linguagem Corporal, Identificar
+                Mentiras)</small>
               <br>
-              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
-                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
-              <!-- <input type="number" name="ler" min="0" max="6" /> -->
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao">
             </label>
-            <label><input type="checkbox" class="dourado-checkbox"> Esconder <small>(Esgueirar-se, Disfarçar, Enganar)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Esconder <small>(Esgueirar-se, Disfarçar,
+                Enganar)</small>
               <br>
-              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
-                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
-              <!-- <input type="number" name="esconder" min="0" max="6" /> -->
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao">
             </label>
           </div>
           <div class="atributo" id="intuicao">
             <div class="titulo-impulsos-container">
+              <div class="titulo-e-maximo">
               <h2>Intuição</h2>
+              <label class="max-impulsos-control">
+                Impulsos:
+                <input type="number" min="1" max="9" value="1" class="max-impulsos-input" data-atributo="intuicao" />
+              </label>
+              </div>
               <div class="impulsos-checkboxes">
                 <input type="checkbox" name="intuicao_impulso_1" class="checkbox-impulso" />
                 <input type="checkbox" name="intuicao_impulso_2" class="checkbox-impulso" />
@@ -171,23 +197,29 @@
               </div>
             </div>
             <hr class="separador-impulsos-acoes" />
-            <label><input type="checkbox" class="dourado-checkbox"> Investigar <small>(Pesquisar, Rastrear, Localizar)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Investigar <small>(Pesquisar, Rastrear,
+                Localizar)</small>
               <br>
-              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
-                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
-              <!-- <input type="number" name="persuasao" min="0" max="6" /> -->
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao">
             </label>
-            <label><input type="checkbox" class="dourado-checkbox"> Focar <small>(Inspecionar, Analisar, Lembrar)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Focar <small>(Inspecionar, Analisar,
+                Lembrar)</small>
               <br>
-              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
-                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
-              <!-- <input type="number" name="focar" min="0" max="6" /> -->
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao">
             </label>
-            <label><input type="checkbox" class="dourado-checkbox"> Sentir <small>(Ocultismo, Canalizar, Revelar)</small>
+            <label><input type="checkbox" class="dourado-checkbox"> Sentir <small>(Ocultismo, Canalizar,
+                Revelar)</small>
               <br>
-              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
-                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao">
-              <!-- <input type="number" name="sentir" min="0" max="6" /> -->
+              <input type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao"> <input type="checkbox" class="checkbox-acao"> <input
+                type="checkbox" class="checkbox-acao">
             </label>
           </div>
         </section>
