--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="fichas-manager.css" />
   <script type="module" src="./script.js"></script>
+  <script type="module" src="./saveFicha.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&family=Jim+Nightshade&display=swap');
   </style>
@@ -63,6 +64,8 @@
         <!-- Botão Logout -->
         <button id="logoutBtn" class="btn-logout">Logout</button>
       </div>
+
+      <div><button type="button" id="btnSalvarFicha">Salvar Ficha</button></div>
 
       <section id="fichasManager" class="fichas-manager">
         <h2>Minhas Fichas</h2>
@@ -334,7 +337,7 @@
             <textarea rows="5" cols="40" placeholder="Descreva as habilidades de círculo aqui..."></textarea>
           </div>
         </div>
-        <button type="submit">Salvar Ficha</button>
+        <!-- <button type="submit">Salvar Ficha</button> -->
       </form>
     </header>
   </main>
