--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="fichas-manager.css" />
   <script type="module" src="./script.js"></script>
-  <script type="module" src="./saveFicha.js"></script>
+  <!-- REMOVA ESTA LINHA: <script type="module" src="./saveFicha.js"></script> -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&family=Jim+Nightshade&display=swap');
   </style>
 
-
+  <!-- REMOVA TODO ESTE BLOCO DE SCRIPT DUPLICADO -->
+  <!--
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
@@ -42,6 +43,7 @@
     window.firebaseAuth = auth;
     window.firebaseDB = db;
   </script>
+  -->
 
 </head>
 
@@ -65,7 +67,7 @@
         <button id="logoutBtn" class="btn-logout">Logout</button>
       </div>
 
-      <div><button type="button" id="btnSalvarFicha">Salvar Ficha</button></div>
+      <!-- REMOVA ESTA LINHA: <div><button type="button" id="btnSalvarFicha">Salvar Ficha</button></div> -->
 
       <section id="fichasManager" class="fichas-manager">
         <h2>Minhas Fichas</h2>
@@ -337,7 +339,7 @@
             <textarea rows="5" cols="40" placeholder="Descreva as habilidades de círculo aqui..."></textarea>
           </div>
         </div>
-        <!-- <button type="submit">Salvar Ficha</button> -->
+        <button type="submit">Salvar Ficha</button>
       </form>
     </header>
   </main>
