personalizar  salvar fichas

--- a/public/index.html
+++ b/public/index.html
@@ -91,11 +91,11 @@
           <div class="atributo" id="corpo">
             <div class="titulo-impulsos-container">
               <div class="titulo-e-maximo">
-              <h2>Corpo</h2>
-              <label class="max-impulsos-control">
-                Impulsos:
-                <input type="number" min="1" max="9" value="1" class="max-impulsos-input" data-atributo="corpo" />
-              </label>
+                <h2>Corpo</h2>
+                <label class="max-impulsos-control">
+                  Impulsos:
+                  <input type="number" min="1" max="9" value="1" class="max-impulsos-input" data-atributo="corpo" />
+                </label>
               </div>
               <div class="impulsos-checkboxes">
                 <input type="checkbox" name="corpo_impulso_1" class="checkbox-impulso" />
@@ -136,11 +136,11 @@
           <div class="atributo" id="astucia">
             <div class="titulo-impulsos-container">
               <div class="titulo-e-maximo">
-              <h2>Astúcia</h2>
-              <label class="max-impulsos-control">
-                Impulsos:
-                <input type="number" min="1" max="9" value="1" class="max-impulsos-input" data-atributo="astucia" />
-              </label>
+                <h2>Astúcia</h2>
+                <label class="max-impulsos-control">
+                  Impulsos:
+                  <input type="number" min="1" max="9" value="1" class="max-impulsos-input" data-atributo="astucia" />
+                </label>
               </div>
               <div class="impulsos-checkboxes">
                 <input type="checkbox" name="astucia_impulso_1" class="checkbox-impulso" />
@@ -182,11 +182,11 @@
           <div class="atributo" id="intuicao">
             <div class="titulo-impulsos-container">
               <div class="titulo-e-maximo">
-              <h2>Intuição</h2>
-              <label class="max-impulsos-control">
-                Impulsos:
-                <input type="number" min="1" max="9" value="1" class="max-impulsos-input" data-atributo="intuicao" />
-              </label>
+                <h2>Intuição</h2>
+                <label class="max-impulsos-control">
+                  Impulsos:
+                  <input type="number" min="1" max="9" value="1" class="max-impulsos-input" data-atributo="intuicao" />
+                </label>
               </div>
               <div class="impulsos-checkboxes">
                 <input type="checkbox" name="intuicao_impulso_1" class="checkbox-impulso" />
@@ -351,6 +351,15 @@
     </div>
   </div>
 
+  <!-- Modal para mensagem de sucesso -->
+  <div id="modalSucesso" class="modal-sucesso">
+    <div class="modal-content-sucesso">
+      <span id="fecharModalSucesso" class="fechar-sucesso">&times;</span>
+      <h2 class="titulo-sucesso">Sucesso!</h2>
+      <p id="mensagemSucesso" class="texto-sucesso">Ficha salva com sucesso!</p>
+      <button id="btnOkSucesso" class="btn-ok-sucesso">OK</button>
+    </div>
+  </div>
 
 </body>
 
